--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -18,18 +18,26 @@
 <main>
 
 
+<div id="contentContainer">
+  <img src="/images/logo.svg" alt="" srcset="">
   <h1>We're coming soon</h1> 
 
   <p> Hello fellow shoppers! We're currently building our new fashion store. 
   Add your email below to stay up-to-date with announcements and our launch deals.
 </p>
-  
+
 <form action="">
   <input type="email" name="Email Address" id="">
   <button type="submit">Submit</button>
 </form>
-  
-  </main>
+</div>
+
+
+<div id="containerImg">
+  <img src="/images/hero-desktop.jpg" alt="" srcset="">
+</div>
+
+</main>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
