added styling to input/button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 <div id="contentContainer">
-  <img src="/images/logo.svg" alt="" srcset="">
+  <img  src="/images/logo.svg" alt="company logo" srcset="" class="logo">
 <h1>
   <span>We're</span> 
   <br>
@@ -36,7 +36,9 @@
 
 <form action="">
   <input type="email" name="Email Address" id="">
-  <button type="submit">Submit</button>
+  <button type="submit">
+    <img src="/images/icon-arrow.svg" alt="" srcset="">
+  </button>
 </form>
 </div>
 
