--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </p>
 
 <form action="">
-  <input type="email" name="Email Address" id="">
+  <input type="email" name="Email Address" placeholder="Email">
   <button type="submit">
     <img src="/images/icon-arrow.svg" alt="" srcset="">
   </button>
