--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </p>
 
 <form action="">
-  <input type="email" name="Email Address" placeholder="Email Address">
+  <input type="email" name="Email Address" placeholder="Email Address" id="email">
   <button type="submit">
     <img src="/images/icon-arrow.svg" alt="" srcset="">
   </button>
@@ -53,5 +53,6 @@
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
+  <script src="app.js"></script>
 </body>
 </html>
