added mobile img, centered text and input, for mobile

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <div id="contentContainer">
   <img  src="/images/logo.svg" alt="company logo" srcset="" class="logo">
 <h1>
+  <img class="mobileImg" src="/images/hero-mobile.jpg" alt="Fashion woman" srcset="">
   <span>We're</span> 
   <br>
   coming
@@ -39,12 +40,13 @@
   <button type="submit">
     <img src="/images/icon-arrow.svg" alt="" srcset="">
   </button>
+  <p>Please provide a valid email</p>
 </form>
 </div>
 
 
 <div id="containerImg">
-  <img src="/images/hero-desktop.jpg" alt="" srcset="">
+  <img class="deskImg" src="/images/hero-desktop.jpg" alt="Fashion woman" srcset="">
 </div>
 </main>
   <footer>
