added form error icon

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 <form action="">
   <input type="email" name="Email Address" placeholder="Email Address" id="email">
   <button type="submit">
-    <img src="/images/icon-arrow.svg" alt="" srcset="">
+    <img src="/images/icon-arrow.svg" alt="Arrow symbol" srcset="">
   </button>
-  <p>Please provide a valid email</p>
+  <p id="formErrMsg">Please provide a valid email</p>
 </form>
 </div>
 
