removed some unused html, updated readme and fixed github images

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 
 <div id="contentContainer">
-  <img  src="/images/logo.svg" alt="company logo" srcset="" class="logo">
+  <img  src="./images/logo.svg" alt="company logo" class="logo">
 
-  <img class="mobileImg" src="/images/hero-mobile.jpg" alt="Fashion woman" srcset="">
+  <img class="mobileImg" src="./images/hero-mobile.jpg" alt="Fashion woman">
   <h1>
   <span>We're</span> 
   <br>
@@ -39,7 +39,7 @@
 <form action="">
   <input type="email" name="Email Address" placeholder="Email Address" id="email">
   <button type="submit">
-    <img src="/images/icon-arrow.svg" alt="Arrow symbol" srcset="">
+    <img src="./images/icon-arrow.svg" alt="Arrow symbol" >
   </button>
   <p id="formErrMsg">Please provide a valid email</p>
 </form>
@@ -47,7 +47,7 @@
 
 
 <div id="containerImg">
-  <img class="deskImg" src="/images/hero-desktop.jpg" alt="Fashion woman" srcset="">
+  <img class="deskImg" src="./images/hero-desktop.jpg" alt="Fashion woman" >
 </div>
 </main>
   <footer>
